<resources>
    <string name="app_name">Virtual Tour</string>
    <string name="destination">Destination</string>
    <string name="departure">Departure</string>
    <string name="direction">Direction</string>
    <string name="type_your_route">Type your route</string>
    <string name="routes">Routes</string>
    <string name="choose_your_route">CHOOSE YOUR ROUTE</string>
    <string name="place_of_interest_spinner_title">Choose the type</string>
    <string name="choose_direction_spinner_title">Choose direction of the route</string>
    <string name="choose_departure_spinner_title">Choose departure point</string>
    <string name="choose_destination_spinner_title">Choose destination point</string>
    <string name="category">Category</string>
    <string name="go">GO</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Where do you want to go?</string>
    <string name="slide_1_desc">Take the virtual tour of Valley Transportation Authority</string>

    <string name="slide_2_title">WHAT IS INTERESTING THERE?</string>
    <string name="slide_2_desc">Pause the navigation any moment to know more about the interesting places around</string>

    <string name="slide_3_title">DO YOU WANT TO GET OFF THE TOUR?</string>
    <string name="slide_3_desc">When you are getting closer to a Stop, you can get off the tour and see the places nearby</string>
    <string name="title_activity_place_of_interest_details">View POIs</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="view_pois">View POIs</string>
    <string name="navigation">Navigation</string>
    <string name="pause">Pause</string>
    <string name="fetch_current_location">Please wait while we \n fetch your current location...</string>
    <string name="fetch_routes">Please wait while \n we are fetching routes...</string>

    <string name="select_route">Please select the route.</string>
    <string name="select_direction">Please select the direction.</string>
    <string name="select_departure">Please select the departure.</string>
    <string name="select_destination">Please select the destination.</string>
    <string name="select_different_departure_destination">Please select different departure and destination stops to start the tour.</string>

    <string name="go_back">Go Back</string>
    <string name="select_view">View</string>

    <!--Views-->
    <string name="front">Front View</string>
    <string name="left">Left View</string>
    <string name="right">Right View</string>
    <string name="back">Back View</string>
    <string name="button_view_route">View Route</string>
    <string name="button_view_near_me">View Near Me</string>
    <string name="internet_check">Internet connection required.</string>
    <string name="use_current_location">Use current location</string>

    <string-array name="views">
        <item>@string/front</item>
        <item>@string/left</item>
        <item>@string/right</item>
    </string-array>

    <string name="loading_poi">Please wait a moment.\nLoading...</string>
    <string name="fetching_poi_details">Please wait a moment.\nLoading details of the place...</string>
    <string name="title_activity_routes">RoutesActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_virtual_tour">Virtual Tour</string>
    <string name="title_near_me">Near Me</string>
    <string name="fetching_route_details">Please wait a moment.\nLoading details of the routes...</string>
    <string name="loading_nearby_type">Please wait a moment.\nLoading Nearby Categories...</string>
    <string name="loading_nearby_custom_poi">Please wait a moment.\nLoading Nearby Custom POI...</string>

    <string name="map_view_button_name">Map</string>
    <string name="satellite_view_button_name">Satellite</string>


</resources>
