<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vta.virtualtour.ui.activities.videoMapScreen.VideoMapActivity">

    <item
        android:id="@+id/menu_item_front"
        android:orderInCategory="100"
        android:title="@string/front"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_left"
        android:orderInCategory="101"
        android:title="@string/left"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_right"
        android:orderInCategory="102"
        android:title="@string/right"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_back"
        android:orderInCategory="103"
        android:title="@string/back"
        app:showAsAction="never" />
</menu>
