<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activities.videoMapScreen.VideoMapActivity">

    <!--<TextView-->
    <!--android:id="@+id/route_name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?android:attr/listPreferredItemHeightSmall"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:paddingLeft="@dimen/value_5dp"-->
    <!--android:paddingTop="@dimen/value_5dp"-->
    <!--android:textColor="@color/colorWhite"-->
    <!--android:textSize="12sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/video_view_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <RelativeLayout
                android:id="@+id/simple_exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/exoplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:resize_mode="fill"
                    app:use_controller="false" />

                <ProgressBar
                    android:id="@+id/video_buffering_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/fullscreen_video_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/value_10dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:src="@drawable/ic_fullscreen_video" />

            <!--<ProgressBar
                android:id="@+id/video_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_10dp"
                android:layout_alignParentBottom="true"
                android:indeterminate="false"
                android:max="100"
                android:secondaryProgress="100"
                android:progressDrawable="@drawable/horizontal_progress"
                style="?android:attr/progressBarStyleHorizontal"/>-->

            <SeekBar
                android:id="@+id/video_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:max="100"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:progressDrawable="@drawable/custom_seekbar_progress"
                android:thumb="@android:color/transparent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/map_view_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/map_view_button"
                    android:layout_width="@dimen/value_50dp"
                    android:layout_height="@dimen/value_30dp"
                    android:layout_marginStart="@dimen/value_5dp"
                    android:layout_marginEnd="@dimen/value_3dp"
                    android:layout_marginTop="@dimen/value_5dp"
                    android:layout_marginBottom="@dimen/value_5dp"
                    android:background="@color/colorWhite"
                    android:text="@string/map_view_button_name"
                    android:textSize="@dimen/text_size_8sp"

                    />

                <Button
                    android:id="@+id/satellite_view_button"
                    android:layout_width="@dimen/value_60dp"
                    android:layout_height="@dimen/value_30dp"
                    android:layout_marginStart="@dimen/value_3dp"
                    android:layout_marginEnd="@dimen/value_5dp"
                    android:layout_marginTop="@dimen/value_5dp"
                    android:layout_marginBottom="@dimen/value_5dp"
                    android:background="@color/colorWhite"
                    android:text="@string/satellite_view_button_name"
                    android:textSize="@dimen/text_size_8sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/fullscreen_map_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/value_10dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:src="@drawable/ic_fullscreen_map" />
        </RelativeLayout>


        <TextView
            android:id="@+id/video_map_text_navigation_details"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeightSmall"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <com.vta.virtualtour.ui.customView.VideoControlView
            android:id="@+id/video_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transperant"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/progress_bar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fetch_current_location"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>
